# freerouting-cpp

./: .gitignore  CMakeLists.txt  DOOR_GENERATION_FIX.md  MAZE_ALGORITHM_STATUS.md  README.md  ROOM_COMPLETION_PLAN.md  ROUTING_STATUS.md  SESSION_SUMMARY.md
docs/: CLAUDE.md  MAZE_ALGORITHM_STATUS.md  NEXT_SESSION.md  README.md
docs/future_features/: canyon_routing.md
include/autoroute/: AutorouteAttemptResult.h  AutorouteAttemptState.h  AutorouteControl.h  AutorouteEngine.h  BatchAutorouter.h  CompleteExpansionRoom.h  CompleteFreeSpaceExpansionRoom.h  Connection.h  DestinationDistance.h  DrillPage.h  DrillPageArray.h  ExpandableObject.h  ExpansionDoor.h  ExpansionDrill.h  ExpansionRoom.h  ExpansionRoomGenerator.h  FreeSpaceExpansionRoom.h  IncompleteConnection.h  IncompleteFreeSpaceExpansionRoom.h  ItemAutorouteInfo.h  ItemRouteResult.h  LayerCostAnalyzer.h  LeeRouter.h  MSTRouter.h  MazeListElement.h  MazeSearchAlgo.h  MazeSearchElement.h  ObstacleExpansionRoom.h  PathFinder.h  PushAndShove.h  ShapeSearchTree.h  SimpleGridRouter.h  SortedRoomNeighbours.h  TargetItemExpansionDoor.h  TaskState.h
include/board/: AngleRestriction.h  BasicBoard.h  BoardOutline.h  Component.h  ConductionArea.h  DrcEngine.h  DrcViolation.h  DrillItem.h  FixedState.h  Item.h  Layer.h  LayerStructure.h  Pin.h  RouteOptimizer.h  RoutingBoard.h  RuleArea.h  Trace.h  Via.h
include/cli/: CommandLineArgs.h  ProgressDisplay.h
include/core/: Arena.h  FixedPoint.h  Padstack.h  Types.h
include/datastructures/: Stoppable.h  TimeLimit.h  UnionFind.h
include/geometry/: Circle.h  CollisionDetector.h  ComplexPolygon.h  ConvexPolygon.h  FloatLine.h  FloatPoint.h  IntBox.h  IntBoxShape.h  IntOctagon.h  Line.h  PolyLine.h  Shape.h  ShapeTree.h  Side.h  SpatialIndex.h  TileShape.h  Vector2.h
include/io/: DsnBoardConverter.h  DsnReader.h  DsnStructs.h  KiCadBoardConverter.h  KiCadPcb.h  KiCadPcbReader.h  KiCadPcbWriter.h  SExprLexer.h  SExprParser.h
include/rules/: ClearanceMatrix.h  Net.h  NetClass.h  Nets.h  ViaInfo.h  ViaRule.h
include/visualization/: BoardRenderer.h  CongestionHeatmap.h
src/: main.cpp
src/autoroute/: AutorouteEngine.cpp  BatchAutorouter.cpp  CompleteFreeSpaceExpansionRoom.cpp  DestinationDistance.cpp  DrillPage.cpp  DrillPageArray.cpp  ExpansionDoor.cpp  ExpansionDrill.cpp  ExpansionRoomGenerator.cpp  FreeSpaceExpansionRoom.cpp  LeeRouter.cpp  MazeListElement.cpp  MazeSearchAlgo.cpp  ObstacleExpansionRoom.cpp  PushAndShove.cpp  ShapeSearchTree.cpp  SimpleGridRouter.cpp  SortedRoomNeighbours.cpp  TargetItemExpansionDoor.cpp
src/board/: DrcEngine.cpp
src/cli/: CommandLineArgs.cpp
src/geometry/: IntBoxShape.cpp  Line.cpp
src/io/: DsnBoardConverter.cpp  DsnReader.cpp
src/visualization/: BoardRenderer.cpp  CongestionHeatmap.cpp
tests/: benchmark_all.sh  test_batch_autorouter.cpp  test_board.cpp  test_board_extensions.cpp  test_data_structures.cpp  test_drc.cpp  test_expansion_rooms.cpp  test_geometry.cpp  test_interactive_routing.cpp  test_io.cpp  test_main.cpp  test_maze_search.cpp  test_phase5_geometry.cpp  test_routing.cpp  test_rule_areas.cpp  test_rules.cpp  test_shapes.cpp
tests/NexRx/: .gitignore  FPGA-SC-02032-2-0-ECP5U-12-Pinout.ods  Library.kicad_sym  NexRx.kicad_dru  NexRx.kicad_pcb  NexRx.kicad_prl  NexRx.kicad_pro  NexRx.kicad_sch  NexRx_routed.kicad_pcb  PGA.kicad_sch  ethernet.kicad_sch  fp-info-cache  fp-lib-table  fpga.kicad_sch  gpio-expander.kicad_sch  microcontroller.kicad_sch  pinout-with-alt.csv  power.kicad_sch  qsd.kicad_sch  rx-presel.kicad_sch  rx-signal-chain.kicad_sch  stm32h753vitx.ioc  tpad.kicad_sch  usb-pd.kicad_sch
tests/NexRx/Library.pretty/: ANDERSONPOWER_PC5930T.kicad_mod  Anderson-114555P2-staple.kicad_mod  Anderson-PowerPole-1336G1-contact.kicad_mod  BN-43-7051-1P-1S-CT.kicad_mod  CSS2H3920K5L00F.kicad_mod  DCK6.kicad_mod  EPC2207-GaN-FET.kicad_mod  GDT3535S1RP.kicad_mod  Guanella-1P-1S.kicad_mod  Guanella-2P-1S.kicad_mod  Guanella-2P-2S.kicad_mod  IPB026N06NATMA1.kicad_mod  PW14.kicad_mod  QFN65P600X600X100-29N-D.kicad_mod  Relay_DPDT_Omron_G2RL-2.kicad_mod  SON50P300X300X80-13N.kicad_mod  SON65P300X300X100-9N-D.kicad_mod  SOP65P640X110-14N.kicad_mod  SOP65P640X120-16N.kicad_mod  SOT95P280X145-6N.kicad_mod  T106-toroid-1-rolling-tire.kicad_mod  T130-toroid-1-rolling-tire.kicad_mod  T50-toroid-1-rolling-tire.kicad_mod  T68-toroid-1-rolling-tire.kicad_mod  T80-toroid-1-rolling-tire.kicad_mod  TS3A4751-RUC14.kicad_mod  Transformer-2P-3S-BN-43-202.kicad_mod  Transformer-hexafilar-200-to-3x22-ohm-BN-43-202.kicad_mod  Transformer-pentafilar-200-to-3x36-ohm-BN-43-202.kicad_mod  Transformer-unun-BN-43-202.kicad_mod  UJ20CHGMSMT4P16TR.kicad_mod
